--- a/src/components/footer-component/footer.scss
+++ b/src/components/footer-component/footer.scss
@@ -5,7 +5,7 @@ footer {
   .footerWrapper {
     overflow: hidden;
     position: relative;
-    padding: 4% 4%;
+    padding: 24px;
     background: var(--footerBg);
 
     h1 {
@@ -13,7 +13,7 @@ footer {
     }
     p{
       color: #D1D1D1;
-      width: 50%;
+      width: 100%;
       margin: 32px 0 40px 0;
     }
     span,a {
@@ -23,20 +23,18 @@ footer {
     .emailMe {
       text-decoration: none;
       padding: 16px;
+      display: block;
+      width: 100%;
       border: 1px solid  #D1D1D1;;
     }
 
     .magicWand {
-      position: absolute;
-      top: -5px;
-      height: 450px;
-      // top: 15%;
-      right: -332px;
+      display: none;
     }
 
     .connectMe {
-      display: flex;
-      width: 78%;
+      display: block;
+      width: 100%;
       border-top: 1px solid var(--footerline);
       margin-top: 56px;
       padding-top: 24px;
@@ -44,12 +42,94 @@ footer {
       align-items: center;
 
       div {
+        display: flex;
+        width: 100%;
+        flex-wrap: wrap;
         svg {
-          margin-right: 24px;
-          transform: scale(1.2)
+          margin: 0 32px 24px 0;
+          transform: scale(1.5)
         }
       }
     }
   }
+}
+
+@include for-tablet-only() {
+  footer {
+    margin-top: 140px;
+    .footerWrapper {
+      overflow: hidden;
+      position: relative;
+      // margin: 0 8% 6% 8%;
+      padding: 4% 4%;
+      background: var(--footerBg);
   
+      h1 {
+        color: #FFFFFF;
+      }
+      p{
+        color: #D1D1D1;
+        width: 50%;
+        margin: 32px 0 40px 0;
+      }
+      span,a {
+        color: #D1D1D1;
+      }
+  
+      .emailMe {
+        text-decoration: none;
+        padding: 16px;
+        display: block;
+        width: 30%;
+        border: 1px solid  #D1D1D1;;
+      }
+
+      .magicWand {
+        display: block;
+        position: absolute;
+        top: 100px;
+        width: auto;
+        height: 450px;
+        right: 0;
+        svg {
+          transform: scale(1);
+        }
+      }
+  
+      .connectMe {
+        display: block;
+        width: 95%;
+        border-top: 1px solid var(--footerline);
+        margin-top: 56px;
+        padding-top: 24px;
+
+        span {
+          width: 100%;
+          text-align: right;
+        }
+  
+        div {
+          width: 100%;
+          svg {
+            margin-right: 24px;
+            transform: scale(1.2)
+          }
+        }
+      }
+    }  
+  }
+}
+
+@include for-desktop-only() {
+
+  footer {
+    .footerWrapper {
+      .connectMe {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+    }
+  }
+
 }
