--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,7 +1,5 @@
 @import '../styles/common.scss';
 
-// $portrait: var(--imgUrl);
-
 .secWrapper {
     position: relative;
 
@@ -51,24 +49,34 @@
                 }
     
                 .buttonHolder {
+                    width: 100%;
                     margin-top: 16px;
                     display: grid;
                     grid-template-columns: 1fr 1fr;
                     grid-gap: 16px;
                     .b3, .b4 {
                         grid-column: 1 / 3;
-                      }
+                    }
                 }
             }
-         
         }
     }
 
-    section:nth-child(1) {
-        padding-top: 32px; 
+    section:first-child {
+        padding-top: 32px;
+        .textp2 {
+            .ImgMobile {
+                float: right;
+                width: 25vh;
+                height: 25vh;
+                object-fit: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: 25vh auto;;
+                background-image: var(--imgUrl); 
+            }
+        }
     }
-
-
 
     section:nth-child(2) {
         .Img { 
@@ -139,12 +147,21 @@
 
 @include for-tablet-only() {
     .secWrapper {
-        // margin-top: 104px;
-
         section {
-            
             .introContent {
             width: 100%;
+            }
+        }
+
+        section:first-child {
+            padding-top: 32px;
+            .textp2 {
+                .ImgMobile {
+                    transform: translateY(-80px);
+                    width: 35vh;
+                    height: 35vh;
+                    background-size: 35vh auto;;
+                }
             }
         }
 
@@ -221,11 +238,19 @@
                 }
             }
         }
+
+        section:first-child {
+            .textp2 {
+                .ImgMobile {
+                    display: none;
+                }
+            }
+        }
     
         section:nth-child(2) {
             padding-top: 140px;
     
-            .Img {
+            .ImgHolder {
             display: block;
             position: fixed;
             top: 20%;
@@ -233,7 +258,7 @@
     
                 .ImgWrapper {
                     
-                    div {
+                    .ImgDesktop {
                         width: 500px;
                         height: 68vh;
                         object-fit: cover;
@@ -246,7 +271,7 @@
                 }
             }
     
-            .Img.nonFixed {
+            .ImgHolder.nonFixed {
                 width: auto; 
                 position: relative;
                 top: 0vh;
