--- a/src/components/header-component/header.scss
+++ b/src/components/header-component/header.scss
@@ -22,7 +22,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: solid 1px #E1E1E1;
+    border-bottom: solid 1px var(--borderLine);
 
     .logo {
       width: auto;
