--- a/src/components/heading-component/heading.scss
+++ b/src/components/heading-component/heading.scss
@@ -3,8 +3,14 @@
 .titleHolder {
 
     @keyframes mymove {
-        from {transform: translateY(100px);}
-        to {transform: translateY(0px);}
+        0% {
+            opacity: 0;
+            transform: translateY(-100px);
+            }
+        100% {
+            opacity: 1;
+            transform: translateY(0px);
+            }
       }
 
     .sectionTitle {
@@ -17,14 +23,15 @@
         transform: translateY(-100px);
         transition: all;
         opacity: 0;
-        transition-duration: 0.6s;
-        transition-timing-function: ease-out;
+        transition-duration: 0.3s;
+        transition-timing-function: ease-in;
     
         &::before {
             content: '';
             display: block;
             position: absolute;
             z-index: -2;
+            opacity: 0;
             width: 80%;
             height: 50%;
             right: -10px;
@@ -36,7 +43,7 @@
             opacity: 1;
             transform: translateY(0px);
             &::before { 
-                animation: mymove 0.6s ease-out;
+                animation: mymove 0.2s ease-in;
                 animation-fill-mode: forwards;
             }
         }
@@ -53,7 +60,8 @@
 @include for-desktop-only () {
     .titleHolder{
        .sectionTitle {
-        font-size: 68px;
+        // font-size: 68px;
+        font-size: 4.5vw;
         } 
     }
 }
