--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,5 +1,29 @@
 @import '../styles/common.scss';
 
+@keyframes anim1  {
+    0%, 100% {
+      transform: scale(1);
+      box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
+    }
+
+    50% {
+      transform: scale(1.05);
+      box-shadow: 0px 30px 17px rgba(0, 0, 0, 0.15);
+    }
+}
+
+@keyframes anim2  {
+    0%, 100% {
+      box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
+      transform: scale(1.05);
+    }
+
+    50% {
+      transform: scale(1);
+      box-shadow: 0px 30px 17px rgba(0, 0, 0, 0.15);
+    }
+}
+
 .secWrapper {
     position: relative;
 
@@ -195,8 +219,7 @@
     
         section {
             padding: 0;
-            // totally height of section should be the height of view port - height of header
-            height: calc(100vh - 180px);
+            margin: 0;
             display: flex;
             position: relative;
             align-items: center;
@@ -239,55 +262,131 @@
             }
         }
 
-        section:first-child {
+        & > section:first-child {
+            height: calc(100vh - 140px);
             .textp2 {
                 .ImgMobile {
                     display: none;
                 }
             }
+            .ImgDesktop {
+                width: 30vw;
+                height: 60vh;
+                object-fit: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: 100% auto;;
+                background-image: var(--imgUrl); 
+                transform: scale(1.25);
+            }
         }
-    
+
+
         section:nth-child(2) {
             padding-top: 140px;
-    
+            height: calc(100vh - 140px);
+            flex-direction: row-reverse;
+            
             .ImgHolder {
-            display: block;
-            position: fixed;
-            top: 20%;
-            right: 8%;
-    
-                .ImgWrapper {
+                div {
+                    display: grid;
+                    position: relative;
+                    transform-origin: center right;
+                    grid-template-columns: auto auto;
+                    grid-gap: 40px;
                     
-                    .ImgDesktop {
-                        width: 500px;
-                        height: 68vh;
-                        object-fit: cover;
-                        background-position: center;
-                        background-repeat: no-repeat;
-                        background-size: 600px auto;;
-                        background-image: var(--imgUrl);
-                        
+                    span {
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        padding: auto;
+                        position: relative;
+                        background: #FFFFFF;
+                        border: 2px solid #000000;
+                        width: 25vh;
+                        height: 25vh;
+                        top: 0px;
+                        left: 0px;
+                        transition: top, left, 0.1s ease-out;
+
+                        &:hover {
+                            background: var(--buttonHover);
+                            top: -5px;
+                            left: 5px;
+                            svg {
+                                path {
+                                    stroke: #ffff;
+                                }
+                            }
+
+                            &::before {
+                                content: 'I go with the Flow';
+                                min-width: 100%;
+                                z-index: -15;
+                                padding: 8px;
+                                color: white;
+                                text-align: center;
+                                font-size: 16px;
+                                background: var(--buttonHover);
+                                position: absolute;
+                                top: -20%;
+                                left: 50%;
+                                transform: translate(-50%, -50%);
+                            }
+                        }
+
+                        &:nth-child(1) {
+                        animation: anim1 5s infinite linear;
+                        transform: scale(1);
+                        }
+
+                        &:nth-child(2) {
+                        animation: anim2 5s infinite linear;
+                        transform: scale(1.05);
+                            &:hover {
+                                &::before {
+                                    content: 'Love is the Reason';
+                                }
+                            }
+                        }
+
+                        &:nth-child(3) {
+                        transform: scale(1.05);
+                        animation: anim2 5s 0.8s infinite linear;
+                            &:hover {
+                                &::before {
+                                    content: 'My Pen is my escape';
+                                    top: 120%;
+                                }
+                            }
+                        }
+
+                        &:nth-child(4) {
+                        transform: scale(1);
+                        animation: anim1 5s infinite linear;
+                            &:hover {
+                                &::before {
+                                    content: 'Stars are mysteries';
+                                    top: 120%;
+                                }
+                            }
+                        }
+
+                        svg {
+                        transform: scale(1.1);
+                        } 
                     }
                 }
             }
-    
-            .ImgHolder.nonFixed {
-                width: auto; 
-                position: relative;
-                top: 0vh;
-                right: 0;
-    
-            }
         }
-    
+
         section:last-child {
+            // height: calc(100vh - 140px);
+            padding-top: 170px;
             display: block;
-            padding-top: 140px;
-            margin-bottom: 80px;
-            height: auto;
             h1 {
                 margin-bottom: 50px;
-              } 
+                } 
 
             .skillHolder {
                 display: flex;
