--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -23,7 +23,8 @@ body {
     --footerBg: #121212;
     --footerline: #363636;
     --hr: hsla(0, 0%, 0%, 0.2);
-    background-color: var(--bg);   
+    --borderLine: #D1D0D0;
+    background-color: var(--bg);  
   }
   
   body.dark {
@@ -39,5 +40,6 @@ body {
     --textNormal: rgb(190, 190, 190);
     --textTitle: #E4E4E4;
     --textLink: yellow;
+    --borderLine: #004A4A;
     --hr: hsla(0, 0%, 100%, 0.2);
   }
