--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -301,8 +301,8 @@
                         align-items: center;
                         padding: auto;
                         position: relative;
-                        background: #FFFFFF;
-                        border: 2px solid #000000;
+                        background: var(--bg);
+                        border: 1.5px solid var(--textTitle);
                         width: 25vh;
                         height: 25vh;
                         top: 0px;
@@ -311,6 +311,7 @@
 
                         &:hover {
                             background: var(--buttonHover);
+                            border: 2px solid var(--buttonHover);
                             top: -5px;
                             left: 5px;
                             svg {
@@ -374,6 +375,9 @@
 
                         svg {
                         transform: scale(1.1);
+                        path {
+                            stroke: var(--textNormal);
+                          }
                         } 
                     }
                 }
