--- a/src/components/header-component/header.scss
+++ b/src/components/header-component/header.scss
@@ -28,7 +28,7 @@ header {
       width: auto;
       height: 42px;
         path
-        {fill: var(--textNormal);}  
+        {stroke: var(--textNormal);}  
     }
 
     .navHolder {
