--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -29,6 +29,8 @@ html {
   align-items: center;
    h1 {
      animation: looper 4s infinite ease;
+     text-align: center;
+     width: 40%;
    }
 }
 
