--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -4,37 +4,8 @@ html {
   /* font-family: sans-serif; */
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  // scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
-
-@keyframes looper {
-  0%, 100% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.2);
-  }
-}
-
-.blocker {
-  display: flex;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 50;
-  background-color: var(--bg);
-  justify-content: center;
-  align-items: center;
-   h1 {
-     animation: looper 4s infinite ease;
-     text-align: center;
-     width: 40%;
-   }
-}
-
-
 
 body {
   background-color: var(--bg);
