add article page, and did some responsive clean up

--- a/src/components/button-component/button.scss
+++ b/src/components/button-component/button.scss
@@ -13,6 +13,7 @@
         width: 100%;
         background: var(--buttonBg);
         padding: 16px;
+        font-weight: bold;
         position: relative;
         border: 1.8px solid var(--textNormal);
         transition: transform 0.2s;
