--- a/src/pages/IllustrationAndArt/IllustrationAndArt.scss
+++ b/src/pages/IllustrationAndArt/IllustrationAndArt.scss
@@ -2,93 +2,154 @@
 
 .imgWapper {
     width: 100%;
-    // margin: 104px 0 80px;
+    margin-top: 40px;
+    & > p {
+        margin-top: 40px;
+    }
 
     .imgHolder {
         width: 100%;
-        margin-top: 72px;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        // display: none;
+        margin-top: 40px;
+        display: grid;
+        grid-gap: 40px;
+        grid-template-columns: 1fr;
 
         .close {
             display: none;
-            &.modal {
-                display: block;
-                position: fixed;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                z-index: 50;
-                background: rgba(0, 0, 0, 0.8);
-            }
         }
 
         .popImage {
             display: none;
-            position: fixed;
-            background-color: bisque;
-            // height: 80%;
-            // width: 50%;
-            padding: 64px;
-            
-            img {
-                display: block;
-                margin: auto;
-                width: auto;
-                height: 70vh;
-            }
-
-            &.showImg {
-                display: block;
-                position: fixed;
-                z-index: 100;
-                top: 50%;
-                left: 50%;
-                margin-right: -50%;
-                transform: translate(-50%, -50%);
-            }
         }
 
         .imgComponent {
-        cursor: pointer;
-       height: 432px;
-        width: 432px;
-        display: grid;
-        overflow: hidden;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
+            cursor: pointer;
+            height: 40vh;
+            width: auto;
+            display: grid;
+            overflow: hidden;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
 
-        &:hover {
-            .imgDescription { 
-                transform: translateY(0);
-                pointer-events: unset;
+            &:hover {
+                .imgDescription { 
+                    transform: translateY(0);
+                    pointer-events: unset;
+                }
             }
-        }
 
-         .imgDescription {
-             background-color: var(--bg);
-             text-align: center;
-             font-size: 14px;
-             transform: translateY(80px);
-             align-self: flex-end;
-             pointer-events: none;
-             padding: 8px;
-             margin: 16px;
-             transition: .3s ease-out;
-         }
-
+            .imgDescription {
+                background-color: var(--bg);
+                text-align: center;
+                font-size: 14px;
+                transform: translateY(80px);
+                align-self: flex-end;
+                pointer-events: none;
+                padding: 8px;
+                margin: 16px;
+                transition: .3s ease-out;
+            }
         }
     }  
 }
 
-// @include for-desktop-only() {
+@include for-tablet-only() {
 
+    .imgWapper {
+        margin-top: 104px;
+
+        .imgHolder {
+            margin-top: 40px;
+            grid-gap: auto;
+            grid-template-columns: 1fr 1fr;
+
+            .close {
+                display: none;
+                &.modal {
+                    display: block;
+                    position: fixed;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    z-index: 50;
+                    background: rgba(0, 0, 0, 0.8);
+                }
+            }
     
-// }
+            .popImage {
+                display: none;
+                position: fixed;
+                background-color: bisque;
+                padding: 24px;
+                
+                img {
+                    display: block;
+                    margin: auto;
+                    max-width: auto;
+                    height: 70vh;
+                }
+    
+                &.showImg {
+                    display: block;
+                    position: fixed;
+                    z-index: 100;
+                    top: 50%;
+                    left: 50%;
+                    margin-right: -50%;
+                    transform: translate(-50%, -50%);
+    
+                    .closeButton {
+                        position: absolute;
+                        top: -5%;
+                        left: 50%;
+                        transform: translateX(-50%);
+                        background: none;
+                        border-style: none;
+                    }
+                }
+            }
+
+            .imgComponent {
+                cursor: pointer;
+                height: 46vh;
+                width: auto;
+            }
+        }
+    }
+}
+
+
+
+@include for-desktop-only() {
+
+    .imgWapper {
+        margin-top: 104px;
+
+        .imgHolder {
+            margin-top: 40px;
+            grid-gap: auto;
+            grid-template-columns: 1fr 1fr 1fr;
+
+            .imgComponent {
+                cursor: pointer;
+                height: 40vh;
+                width: auto;
+            }
+
+            .popImage {
+                
+                img {
+                    display: block;
+                    margin: auto;
+                    max-width: auto;
+                    height: 80vh;
+                }
+            }
+        }
+    }
+}
 
 
 
