--- a/src/pages/projects/projectListing.scss
+++ b/src/pages/projects/projectListing.scss
@@ -7,27 +7,31 @@
         display: flex;
         justify-content: space-between;
         flex-direction: column-reverse;
-        margin: 80px 0 ;
+        margin: 80px 0;
         
 
         .projectListContentArea {
             width: 100%;
-
             h1 {
                 margin-bottom: 40px;
             }
-
         }
 
         .imageHolder {
-            background-color: grey; 
+            display: inline-flex;
+            background-color: rgb(240, 240, 240);
             width: 100%; 
-            height: 40vh;
+            height: 30vh;
+
+            img {
+                margin: auto;
+                padding: 4%;
+            }
         }
     }
 }
 
-@include for-desktop-only() {
+@include for-tablet-only() {
     
     .projectListingWapper {
     
@@ -36,9 +40,32 @@
             justify-content: space-between;
             flex-direction: row;
             align-items: center;
-            // height: 60vh;
-            margin-bottom: 180px;
+            margin-bottom: 80px;
+
+            .imageHolder {
+                margin: 0 0 0 5%;
+            }
     
+            &:nth-child(odd) {
+                flex-direction: row-reverse;
+                .imageHolder {
+                        margin: 0 5% 0 0;
+                }
+            }
+    
+            .projectListContentArea {
+                width: 100%;
+            }
+        }
+    }
+}
+
+@include for-desktop-only() {
+
+    .projectListingWapper {
+        .projectListComponent {
+            margin-bottom: 180px;
+
             &:nth-child(odd) {
                 flex-direction: row-reverse;
             }
@@ -46,9 +73,8 @@
             .projectListContentArea {
                 width: 40%;
             }
-    
-            .imageHolder {
-                background-color: rgb(240, 240, 240); 
+
+            .imageHolder { 
                 width: 50%; 
                 padding: 40px;
                 display: grid;
@@ -60,6 +86,7 @@
             }
         }
     }
+
 }
 
 
