--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -34,14 +34,27 @@
 
         .introContent {
             width: 100%;
+
+            .highlited {
+                font-size: 16px;
+                position: relative;
+                display: inline;
+
+                &::before {
+                    content: '';
+                    position: absolute;
+                    opacity: 0.8;
+                    z-index: -1;
+                    height: 14px;
+                    width: 90%;
+                    top: 50%;
+                    right: -20px;
+                    background-color: var(--textAccent);
+                    display: block;
+                }
+            }
     
             .textWrapper {
-
-                span {
-                    background: #000;
-                    padding: 0 8px;
-                    color: white;
-                }
 
                 .textp1 {
                     margin-top: 24px;
@@ -53,24 +66,6 @@
             }
     
             .buttonWrapper {
-    
-                p {
-                    font-size: 16px;
-                    position: relative;
-                    display: inline;
-    
-                    &::before {
-                        content: '';
-                        position: absolute;
-                        z-index: -1;
-                        height: 14px;
-                        width: 90%;
-                        top: 50%;
-                        right: -20px;
-                        background-color: var(--textAccent);
-                        display: block;
-                    }
-                }
     
                 .buttonHolder {
                     width: 100%;
@@ -97,33 +92,53 @@
     }
 
     section:last-child {
-        .skillset {
+        .skillHolder {
+            .textWrapper {
+                
+                .tools {
+                    display: flex;
+                    flex-flow: wrap;
+                    width: 80%;
+                    margin-top: 32px;
+                    p {
+                        margin: 0 16px 24px 0;
+                        span {
+                            color: white;
+                            padding: 8px;
+                            background: var(--buttonHover);
+                        }
+                    }
+                }
+            }
+
+            .skillset {
             margin-top: 24px;
             width: 100%;
 
-            .skilly {
-                width: 100%;
-                display: block;
-                padding: 8px 0;
+                .skilly {
+                    width: 100%;
+                    display: block;
+                    padding: 8px 0;
 
-                svg {
-                    transform-origin: top left;
-                    margin-top: 16px;
-                    
-                    circle {
-                        stroke: var(--textNormal);
-                      }
-                    
-                      .circleFill {
-                        fill: var(--textNormal);
-                      }
-                    
-                      path {
-                        stroke: var(--textNormal);
-                      }
+                    svg {
+                        transform-origin: top left;
+                        margin-top: 16px;
+                        
+                        circle {
+                            stroke: var(--textNormal);
+                        }
+                        
+                        .circleFill {
+                            fill: var(--textNormal);
+                        }
+                        
+                        path {
+                            stroke: var(--textNormal);
+                        }
+                    }
                 }
             }
-        }
+        } 
     }
 }
 
@@ -171,17 +186,28 @@
         }
 
         section:last-child {
-            .skillset {
+            .skillHolder {
+
+                .textWrapper {
+                
+                    .tools {
+                        width: 80%;
+                        margin-top: 32px;
+                    }
+                }
+
+                .skillset {
                 margin-top: 40px;
                 width: 100%;
                 display: flex;
                 flex-wrap: wrap;
     
-                .skilly {
-                    width: 50%;
-                    // margin-left: 3px;
-                    display: block;
-                    padding: 20px 0;
+                    .skilly {
+                        width: 50%;
+                        // margin-left: 3px;
+                        display: block;
+                        padding: 20px 0;
+                    }
                 }
             }
         }
@@ -277,11 +303,12 @@
                         justify-content: center;
                         align-items: center;
                         padding: auto;
+                        cursor: pointer;
                         position: relative;
                         background: var(--bg);
                         border: 1.5px solid var(--textTitle);
-                        width: 25vh;
-                        height: 25vh;
+                        width: 22vh;
+                        height: 22vh;
                         top: 0px;
                         left: 0px;
                         transition: top, left, 0.1s ease-out;
@@ -381,9 +408,9 @@
                 .skillset {
                     width: 60%;
                     display: block;
-                    padding-right: 50px;
-                    margin-right: 50px;
-                    border-right: 1px solid #C8C8C8;
+                    padding-left: 50px;
+                    margin-left: 50px;
+                    border-left: 1px solid #C8C8C8;
         
                     .skilly {
                         width: 90%;
